--- a/main.css
+++ b/main.css
@@ -6,225 +6,256 @@
 
 
 div.main {
-  background: #0264d6;
-  /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%, #0264d6), color-stop(100%, #1c2b5a));
-  /* Chrome,Safari4+ */
-  background: -webkit-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-  /* Opera 12+ */
-  background: -ms-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-  /* IE10+ */
-  background: radial-gradient(ellipse at center, #0264d6 1%, #1c2b5a 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0264d6', endColorstr='#1c2b5a', GradientType=1);
-  /* IE6-9 fallback on horizontal gradient */
-  height: calc(100vh);
-  width: 100%;
+    background: #0264d6;
+    /* Old browsers */
+    background: -moz-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%, #0264d6), color-stop(100%, #1c2b5a));
+    /* Chrome,Safari4+ */
+    background: -webkit-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
+    /* Opera 12+ */
+    background: -ms-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
+    /* IE10+ */
+    background: radial-gradient(ellipse at center, #0264d6 1%, #1c2b5a 100%);
+    /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0264d6', endColorstr='#1c2b5a', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
+    height: calc(100vh);
+    width: 100%;
 }
 
 [class*="fontawesome-"]:before {
-  font-family: 'FontAwesome', sans-serif;
+    font-family: 'FontAwesome', sans-serif;
 }
 
 /* ---------- GENERAL ---------- */
 
 * {
-  box-sizing: border-box;
-  margin: 0px auto;
-
-  &:before,
-  &:after {
     box-sizing: border-box;
-  }
+    margin: 0px auto;
+
+    &:before,
+    &:after {
+        box-sizing: border-box;
+    }
 
 }
 
 body {
 
-  color: #606468;
-  font: 87.5%/1.5em 'Open Sans', sans-serif;
-  margin: 0;
+    color: #606468;
+    font: 87.5%/1.5em 'Open Sans', sans-serif;
+    margin: 0;
 }
 
 a {
-  color: #eee;
-  text-decoration: none;
+    color: #eee;
+    text-decoration: none;
 }
 
 a:hover {
-  color: black;
+    color: black;
+}
+
+.navbar-laravel {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .04);
+}
+
+.navbar-brand,
+.nav-link,
+.my-form,
+.login-form {
+    font-family: Raleway, sans-serif;
+}
+
+.my-form {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.my-form .row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.login-form {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.login-form .row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 input {
-  border: none;
-  font-family: 'Open Sans', Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.5em;
-  padding: 0;
-  -webkit-appearance: none;
+    border: none;
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.5em;
+    padding: 0;
+    -webkit-appearance: none;
 }
 
 p {
-  line-height: 1.5em;
+    line-height: 1.5em;
 }
 
 .clearfix {
-  *zoom: 1;
+    *zoom: 1;
 
-  &:before,
-  &:after {
-    content: ' ';
-    display: table;
-  }
+    &:before,
+    &:after {
+        content: ' ';
+        display: table;
+    }
 
-  &:after {
-    clear: both;
-  }
+    &:after {
+        clear: both;
+    }
 
 }
 
 .container {
-  left: 50%;
-  position: fixed;
-  top: 50%;
-  transform: translate(-50%, -50%);
+    left: 50%;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* ---------- LOGIN ---------- */
 .header {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 #login form {
-  width: 250px;
+    width: 250px;
 }
 
 #login,
 .logo {
-  display: inline-block;
-  width: 40%;
+    display: inline-block;
+    width: 40%;
 }
 
 #login {
-  border-right: 1px solid #fff;
-  padding: 0px 22px;
-  width: 59%;
+    border-right: 1px solid #fff;
+    padding: 0px 22px;
+    width: 59%;
 }
 
 .logo {
-  width: 60%;
-  color: #fff;
-  font-size: 50px;
-  line-height: 125px;
-  color: #fff;
-  font-size: 40px;
-  line-height: 125px;
-  margin-left: 50px;
-  letter-spacing: 2px;
+    width: 60%;
+    color: #fff;
+    font-size: 50px;
+    line-height: 125px;
+    color: #fff;
+    font-size: 40px;
+    line-height: 125px;
+    margin-left: 50px;
+    letter-spacing: 2px;
 }
 
 .login {
-  border: 1px black solid;
-  width: 130px;
-  height: 50px;
-  padding: 10px;
-  text-align: center;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 10px;
-  letter-spacing: 2px;
+    border: 1px black solid;
+    width: 130px;
+    height: 50px;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    border-radius: 10px;
+    letter-spacing: 2px;
 }
 
 .login span {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 
 .login:hover {
-  color: black;
-  cursor: pointer;
+    color: black;
+    cursor: pointer;
 }
 
 .underline {
-  position: relative;
-  top: -20px;
-  border: 1px solid #5EA1DE;
-  width: 95%;
+    position: relative;
+    top: -20px;
+    border: 1px solid #5EA1DE;
+    width: 95%;
 }
 
 #login form span.fa {
-  background-color: #fff;
-  border-radius: 3px 0px 0px 3px;
-  color: #000;
-  display: block;
-  float: left;
-  height: 50px;
-  font-size: 24px;
-  line-height: 50px;
-  text-align: center;
-  width: 50px;
+    background-color: #fff;
+    border-radius: 3px 0px 0px 3px;
+    color: #000;
+    display: block;
+    float: left;
+    height: 50px;
+    font-size: 24px;
+    line-height: 50px;
+    text-align: center;
+    width: 50px;
 }
 
 #login form input {
-  height: 50px;
+    height: 50px;
 }
 
 fieldset {
-  padding: 0;
-  border: 0;
-  margin: 0;
+    padding: 0;
+    border: 0;
+    margin: 0;
 
 }
 
 #login form input[type="text"],
 input[type="password"] {
-  background-color: #fff;
-  border-radius: 0px 3px 3px 0px;
-  color: #000;
-  margin-bottom: 1em;
-  padding: 0 16px;
-  width: 200px;
+    background-color: #fff;
+    border-radius: 0px 3px 3px 0px;
+    color: #000;
+    margin-bottom: 1em;
+    padding: 0 16px;
+    width: 200px;
 }
 
 #login form input[type="submit"] {
-  border-radius: 3px;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  background-color: #030303;
-  color: #eee;
-  font-weight: bold;
-  /* margin-bottom: 2em; */
-  text-transform: uppercase;
-  padding: 5px 10px;
-  height: 30px;
-  line-height: 10px;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background-color: #030303;
+    color: #eee;
+    font-weight: bold;
+    /* margin-bottom: 2em; */
+    text-transform: uppercase;
+    padding: 5px 10px;
+    height: 30px;
+    line-height: 10px;
 }
 
 span a {
-  color: white;
+    color: white;
 }
 
 span a:hover {
-  color: black;
+    color: black;
 }
 
 #login form input[type="submit"]:hover {
-  background-color: rgb(179, 14, 170);
+    background-color: rgb(179, 14, 170);
 }
 
 #login>p {
-  text-align: center;
+    text-align: center;
 }
 
 #login>p span {
-  padding-left: 5px;
+    padding-left: 5px;
 }
 
 .middle {
-  display: flex;
-  width: 600px;
+    display: flex;
+    width: 600px;
 }
