--- a/TO DO main page/main.css
+++ b/TO DO main page/main.css
@@ -10,7 +10,7 @@
     min-height: 100%;
     height:60%;
   }
-  
+   
   body {
     min-height: 100%;
     position: relative;
@@ -309,7 +309,6 @@
   }
   
   .box .content {
-    background-color: ;
     max-height: 15em;
     overflow: scroll;
     padding-left: 15px;
@@ -317,11 +316,11 @@
     text-align: justify;
   }
   
-  #to_do_box {}
+  /*#to_do_box {}
   
   #in_progress_box {}
   
-  #done_box {}
+  #done_box {}*/
   
   #footer {
     background-color: grey;
