--- a/TO DO main page/main.css
+++ b/TO DO main page/main.css
@@ -10,9 +10,9 @@
     min-height: 100%;
     height:60%;
   }
-   
+  
   body {
-    min-height: 100%;
+    min-height: 90%;
     position: relative;
     margin-top: 0px;
   }
@@ -145,10 +145,11 @@
   /* Style the input */
   
   input {
-    margin: 0;
+    margin-left: 15px;
     border: none;
+    background-color: #d9d9d9;
     border-radius: 0;
-    width: 75%;
+    width: 77%;
     padding: 10px;
     float: left;
     font-size: 16px;
@@ -156,13 +157,13 @@
   
   /* Style the "Add" button */
   .addBtn {
-    padding: 10px;
-    width: 25%;
-    background: #d9d9d9;
+    padding: 0px;
+    width: 15%;
+    background: #888;
     color: #555;
     float: left;
     text-align: center;
-    font-size: 16px;
+    font-size: 10px;
     cursor: pointer;
     transition: 0.3s;
     border-radius: 0;
@@ -185,6 +186,13 @@
     /* % of parent elemenent which navi section */
     padding: 5px;
   }
+
+  #log-out {
+    text-align: right;
+    margin-right: 5px;
+    color: white;
+    margin-top: 5px;
+  }
   
   .fab {
     padding: 10px;
@@ -199,8 +207,9 @@
     padding: 10px;
     font-size: 20px;
     width: 40px;
-    text-align: center;
+    text-align: right;
     text-decoration: none;
+    color: white;
   }
   
   .fa:hover {
@@ -253,12 +262,12 @@
   
   header {
     border: dotted 4px #10e0e0;
-    padding: 0em;
+    padding: 0.5em;
     background-color: rgb(36, 36, 34);
     border-top-right-radius: 2em;
     border-top-left-radius: 2em;
     text-align: right;
-    padding-right: 6em;
+    padding-right: 4em;
     color: rgb(198, 198, 198);
   }
   
@@ -268,7 +277,7 @@
     margin-top: 2%;
     border: 0.5px solid grey;
     border-radius: 6px;
-    width: 10%;
+    width: 150px;
     margin: auto;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -278,9 +287,10 @@
   
   #boxes_field {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 2%;
-    margin-bottom: 1%;
+    margin-bottom: 4%;
   }
   
   .box {
@@ -292,6 +302,7 @@
     margin-top: 2%;
     margin-bottom: 1%;
     text-align: center;
+    min-height: 25em;
   }
   
   .box .title {
@@ -309,18 +320,18 @@
   }
   
   .box .content {
-    max-height: 15em;
+    max-height: 16em;
     overflow: scroll;
     padding-left: 15px;
     padding-right: 10px;
     text-align: justify;
   }
   
-  /*#to_do_box {}
+  /* #to_do_box {}
   
   #in_progress_box {}
   
-  #done_box {}*/ 
+  #done_box {} */
   
   #footer {
     background-color: grey;
