--- a/TO DO main page/main.css
+++ b/TO DO main page/main.css
@@ -351,4 +351,37 @@
   .fas.fa-plus {
     color: #10e0e0;
   }
+
+/*Next  TASKS list  */
+
+.addList {
+  color: #FA057E;
+  text-align: center;
+  margin-top: 2%;
+  border: 0.5px solid grey;
+  border-radius: 6px;
+  width: 150px;
+  margin: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  padding: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  font-family: 'Montserrat', serif;
+  font-size: 1.5em;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.addList:hover {
+  background-color: #10e0e0;
+  transition: 0.5s;
+}
+
+.box.disappearance {
+  display: none;
+}
+
+.disappearance2 {
+  display: none;
+}
   
