--- a/main.css
+++ b/main.css
@@ -6,28 +6,13 @@
 
 
 div.main {
-    background: #0264d6;
-    /* Old browsers */
-    background: -moz-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-    /* FF3.6+ */
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%, #0264d6), color-stop(100%, #1c2b5a));
-    /* Chrome,Safari4+ */
-    background: -webkit-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -o-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-    /* Opera 12+ */
-    background: -ms-radial-gradient(center, ellipse cover, #0264d6 1%, #1c2b5a 100%);
-    /* IE10+ */
-    background: radial-gradient(ellipse at center, #0264d6 1%, #1c2b5a 100%);
-    /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0264d6', endColorstr='#1c2b5a', GradientType=1);
-    /* IE6-9 fallback on horizontal gradient */
+    background: white;
     height: calc(100vh);
     width: 100%;
 }
 
 [class*="fontawesome-"]:before {
-    font-family: 'FontAwesome', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* ---------- GENERAL ---------- */
@@ -36,22 +21,19 @@ div.main {
     box-sizing: border-box;
     margin: 0px auto;
 
-    &:before,
-    &:after {
-        box-sizing: border-box;
-    }
-
 }
 
 body {
 
     color: #606468;
+    font-family: 'Montserrat', serif;
+    font-size: 0.9em;
     font: 87.5%/1.5em 'Open Sans', sans-serif;
     margin: 0;
 }
 
 a {
-    color: #eee;
+    color: #606468;
     text-decoration: none;
 }
 
@@ -127,52 +109,56 @@ p {
 
 /* ---------- LOGIN ---------- */
 .header {
-    display: flex;
-    align-items: center;
+    border: dotted 4px #10e0e0;
+    padding: 0.5em;
+    background-color: rgb(36, 36, 34);
+    border-top-right-radius: 2em;
+    border-top-left-radius: 2em;
+    text-align: right;
+    padding-right: 4em;
+    color: rgb(198, 198, 198);
 }
+
+nav {
+    background-color: grey;
+    position: sticky;
+    min-height: 50px;
+    box-shadow: 0 8px 6px -6px black;
+  }
 
 #login form {
     width: 250px;
 }
 
-#login,
-.logo {
-    display: inline-block;
-    width: 40%;
-}
 
 #login {
-    border-right: 1px solid #fff;
+    border-right: 1px solid grey;
     padding: 0px 22px;
     width: 59%;
 }
 
-.logo {
-    width: 60%;
-    color: #fff;
-    font-size: 50px;
-    line-height: 125px;
-    color: #fff;
-    font-size: 40px;
-    line-height: 125px;
-    margin-left: 50px;
-    letter-spacing: 2px;
-}
 
-.login {
+/* .login {
     border: 1px black solid;
     width: 130px;
     height: 50px;
     padding: 10px;
     text-align: center;
-    color: white;
-    text-transform: uppercase;
     border-radius: 10px;
-    letter-spacing: 2px;
-}
+    letter-spacing: 2px; 
+    color: #FA057E;
+    background-color: #F0F0F0;
+    border-radius: 6px;
+    font-family: 'Montserrat', serif;
+    font-size: 1.2em;
+    cursor: pointer;
+    font-weight: bold;
+   
+} */
 
 .login span {
     margin-right: 10px;
+    margin-top: 6px;
 }
 
 .login:hover {
@@ -180,12 +166,6 @@ p {
     cursor: pointer;
 }
 
-.underline {
-    position: relative;
-    top: -20px;
-    border: 1px solid #5EA1DE;
-    width: 95%;
-}
 
 #login form span.fa {
     background-color: #fff;
@@ -213,7 +193,7 @@ fieldset {
 
 #login form input[type="text"],
 input[type="password"] {
-    background-color: #fff;
+    background-color: #10e0e0;
     border-radius: 0px 3px 3px 0px;
     color: #000;
     margin-bottom: 1em;
@@ -236,7 +216,7 @@ input[type="password"] {
 }
 
 span a {
-    color: white;
+    color: grey;
 }
 
 span a:hover {
@@ -258,4 +238,17 @@ span a:hover {
 .middle {
     display: flex;
     width: 600px;
+}
+
+.fas {
+    padding: 10px;
+    font-size: 30px;
+    width: 40px;
+    text-align: right;
+    text-decoration: none;
+    color: white;
+}
+.fas.fa-clipboard-list {
+    color: 
+    #10e0e0;
 }
